@@ -3,7 +3,7 @@
  * XPDDEFAULT.C - Default performance data routines
  *
  * Copyright (c) 2000-2007 Ethan Galstad (nagios@nagios.org)
- * Last Modified: 11-10-2007
+ * Last Modified: 11-13-2007
  *
  * License:
  *
@@ -446,14 +446,8 @@ int xpddefault_run_service_performance_data_command(service *svc){
 
 	log_debug_info(DEBUGL_PERFDATA,2,"Processed service performance data command line: %s\n",processed_command_line);
 
-	/* set environment variables */
-	set_all_macro_environment_vars(TRUE);
-
 	/* run the command */
 	my_system(processed_command_line,xpddefault_perfdata_timeout,&early_timeout,&exectime,NULL,0);
-
-	/* unset environment variables */
-	set_all_macro_environment_vars(FALSE);
 
 	/* check to see if the command timed out */
 	if(early_timeout==TRUE)
@@ -501,16 +495,10 @@ int xpddefault_run_host_performance_data_command(host *hst){
 
 	log_debug_info(DEBUGL_PERFDATA,2,"Processed host performance data command line: %s\n",processed_command_line);
 
-	/* set environment variables */
-	set_all_macro_environment_vars(TRUE);
-
 	/* run the command */
 	my_system(processed_command_line,xpddefault_perfdata_timeout,&early_timeout,&exectime,NULL,0);
 	if(processed_command_line==NULL)
 		return ERROR;
-
-	/* unset environment variables */
-	set_all_macro_environment_vars(FALSE);
 
 	/* check to see if the command timed out */
 	if(early_timeout==TRUE)
